[gd_scene load_steps=7 format=2]

[ext_resource path="res://Object/Controller.png" type="Texture" id=1]
[ext_resource path="res://Object/ControllerText.png" type="Texture" id=2]
[ext_resource path="res://CursorHider/CursorHider.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Recommendation.gd" type="Script" id=4]

[sub_resource type="Animation" id=3]
resource_name = "FadeToNormal"
tracks/0/type = "value"
tracks/0/path = NodePath("../Fader:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeToBlack"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Recommendation" type="Node2D"]
script = ExtResource( 4 )

[node name="CursorHider" parent="." instance=ExtResource( 3 )]

[node name="Background" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 1 )

[node name="Controller" type="TextureRect" parent="."]
margin_left = 218.0
margin_top = -12.0
margin_right = 282.0
margin_bottom = 52.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 157.0
margin_top = 188.0
margin_right = 322.0
margin_bottom = 252.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Fader" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 1 )

[node name="FadeToNormal" type="AnimationPlayer" parent="."]
root_node = NodePath("../FadeToBlack")
anims/FadeToNormal = SubResource( 3 )

[node name="FadeToBlack" type="AnimationPlayer" parent="."]
root_node = NodePath("../Fader")
anims/FadeToBlack = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[connection signal="animation_finished" from="FadeToNormal" to="." method="_on_FadeToNormal_animation_finished"]
[connection signal="animation_finished" from="FadeToBlack" to="." method="_on_FadeToBlack_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
